projects/invoice-hyperleder-fabric/test-network/docker/couchdb0-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert -f docker-compose-couch.yaml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: couchdb0
  name: couchdb0
spec:
  ports:
  - name: "5984"
    port: 5984
    targetPort: 5984
  selector:
    io.kompose.service: couchdb0
status:
  loadBalancer: {}
