projects/invoice-hyperleder-fabric/test-network/docker/docker_test-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: docker_test
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/docker_test: "true"
  podSelector:
    matchLabels:
      io.kompose.network/docker_test: "true"
